# rust_matrix

./: Cargo.toml  README.md  taplo.toml
src/: decomposition.rs  display.rs  element.rs  lib.rs  macro_matrix.rs  matrix.rs  operations.rs  vector.rs
src/decomposition/: lu.rs
src/operations/: add.rs  adj.rs  cofactor.rs  det.rs  equals.rs  get.rs  inverse.rs  mul.rs  mul_vec.rs  reduce.rs  row_ops.rs  scale.rs  set.rs  swap.rs  transpose.rs
